<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UI.home.order.OrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/cardHed"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentTop="true"
            android:textColor="@color/primmery"
            android:textStyle="bold"
            android:id="@+id/trxtTitsl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/orders" />


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"

            android:padding="8dp"
            android:background="#F8F8F8">

            <ImageButton
                android:id="@+id/btnPrevious"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_circle_button"
                android:src="@drawable/arrow_back"
                android:contentDescription="Previous"
                app:tint="@color/primmery" />




            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="32dp"
                android:layout_marginStart="20dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_circle_button"
                android:src="@drawable/arrow_right"
                android:contentDescription="Next"
                app:tint="@color/primmery" />

            <Button
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/refresh"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:drawableLeft="@drawable/ic_refresh"
                android:backgroundTint="@color/primmery"
                android:layout_marginStart="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>
        </LinearLayout>
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:text="@string/no_orders_yet"
        android:textColor="@color/red"
        android:gravity="center"
        android:id="@+id/textEmptyMasseg"
        android:textSize="24sp"
        android:visibility="gone"

        android:textStyle="bold"
        android:layout_below="@+id/cardHed"
        android:layout_height="match_parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/orderRecyclerView"


       android:layout_height="match_parent"
        android:layout_below="@+id/cardHed"
        >

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>