<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.home.HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="92dp"
        android:layout_height="match_parent"
        android:orientation="vertical"



        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:paddingTop="43dp"

            android:orientation="vertical">

            <ImageView
                android:layout_width="66dp"
                android:layout_height="26.14dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="23dp"
                android:src="@drawable/logog" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:layout_height="wrap_content">


                <androidx.cardview.widget.CardView

                    android:id="@+id/btnOrders"
                    style="@style/CardPressed"
                    android:layout_width="72dp"
                    android:layout_height="66dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical"

                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"

                            android:layout_gravity="center"
                            android:src="@drawable/order" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:text="@string/orders"
                            android:textColor="@color/primmery" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/btnHistory"

                    style="@style/CardDefault"
                    android:layout_width="72dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical"

                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"

                            android:layout_gravity="center"
                            android:src="@drawable/history" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"

                            android:layout_marginTop="8dp"
                            android:text="@string/history"
                            android:textColor="@color/primmery" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView

                    android:id="@+id/summary"
                    style="@style/CardDefault"
                    android:layout_width="72dp"
                    android:layout_height="66dp"

                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical"

                        android:padding="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"

                            android:layout_gravity="center"
                            android:src="@drawable/summary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:text="@string/summary"
                            android:textColor="@color/primmery" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingBottom="8dp">


            <androidx.cardview.widget.CardView

                android:id="@+id/btnLangog"
                style="@style/CardDefault"
                android:layout_width="70dp"

                android:layout_height="66dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"

                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"

                        android:layout_gravity="center"
                        android:src="@drawable/ic_language" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/langoug"
                        android:textColor="@color/primmery" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView

                android:id="@+id/btnLogout"
                style="@style/CardDefault"
                android:layout_width="70dp"
                android:layout_height="66dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"

                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"

                        android:layout_gravity="center"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="@string/logout"
                        android:textColor="@color/red" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="916dp"
            android:layout_height="75dp"

            app:cardBackgroundColor="#F8F8F8"
            app:cardCornerRadius="15dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginEnd="16dp"
                android:paddingStart="24dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30.5dp"
                    android:layout_height="43.85dp"

                    android:src="@drawable/ic_chef"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txtUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ahmmed"
                        android:textColor="@color/primmery"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="17-19-12"

                        android:textSize="13dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="58dp"
                        android:gravity="center"

                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/green"
                            app:cardCornerRadius="20dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/green"
                            android:text="@string/neww" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="58dp"

                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/pink"
                            app:cardCornerRadius="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/pink"
                            android:text="@string/delayed" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="58dp"
                        android:gravity="center"

                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/primmery"
                            app:cardCornerRadius="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primmery"
                            android:text="@string/changed" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"

                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            app:cardBackgroundColor="@color/gry"
                            app:cardCornerRadius="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gry"
                            android:text="@string/canceled" />

                    </LinearLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_home"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:orientation="vertical"

     />



    </LinearLayout>


</LinearLayout>