<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="205dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/white"
    android:elevation="5dp"
    android:layoutDirection="ltr"
    android:layout_height="480dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/colorItem"
            app:cardBackgroundColor="#90D08D"
            android:orientation="vertical"
            android:layout_height="102dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_height="102dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2.5"
                        android:text="new"
                        android:id="@+id/txtState"
                        android:textSize="12dp"
                        android:textColor="#28D145"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/txtTime"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="12dp"
                        android:text="10:22:33"
                        android:layout_gravity="end|center_vertical"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2.5"
                        android:text="orderState"
                        android:id="@+id/txtOrderState"
                        android:textSize="14dp"
                        android:textColor="#28D145"
                        android:layout_height="wrap_content"/>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"


                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/order_type"
                            android:textColor="#383535"
                            android:textSize="12dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/txtDine"
                            android:layout_width="wrap_content"
                            android:text="Dine in"
                            android:textColor="#383535"
                            android:textSize="12dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"


                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/takentime"
                            android:textColor="#383535"
                            android:textSize="12dp"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/txtTimee"
                            android:layout_width="wrap_content"
                            android:text="2:20"
                            android:textColor="#383535"
                            android:textSize="12dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            tools:ignore="DuplicateIds" />


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewOnePr"
            android:layout_width="match_parent"
            android:paddingVertical="8dp"
            android:layout_height="0dp"
            android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnStartPrepp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/doleyd_background"
        android:text="@string/start_prepare"
        android:drawableStart="@drawable/play"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/btnPUPM"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/pupm_background"
        android:text="@string/pump"
        android:drawableStart="@drawable/ic_pump"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>
</RelativeLayout>



</androidx.cardview.widget.CardView>